@@ -1,6 +1,7 @@
 # Next
 
 - Improves cover loading priority handling
+- Minor search performance improvements
 
 # 6.3.3
 
